--- a/Modi game/index.html
+++ b/Modi game/index.html
@@ -74,11 +74,11 @@
 <body>
 
     <audio id="bg-music" loop>
-        <source src="bgm.mp3" type="audio/mpeg">
+        <source src="bgm12.mp3" type="audio/mpeg">
     </audio>
 
     <audio id="die-sound">
-        <source src="die.mp3" type="audio/mpeg">
+        <source src="cut.mp3" type="audio/mpeg">
     </audio>
 
     <div id="ui-layer">
